fixed pwa manifest

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#ED6A5E" />
+    <meta name="theme-color" content="#00B4D8" />
     <meta name="description" content="BORED - Book.Of.Recipes.Easily.Done. A Progressive Web application to Read, Create, Share cooking recipes."/>
     <meta name="keywords" content="2020, bored, recipe, kitchen, pwa, react, nodejs, mongo, typescript">
     <meta name="author" content="Pramod Jingade">
