--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,7 +51,7 @@
     <link rel="apple-touch-startup-image" href="./favicon/ios/apple-splash-1334-750.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
     <link rel="apple-touch-startup-image" href="./favicon/ios/apple-splash-640-1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="./favicon/ios/apple-splash-1136-640.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <title>Time-Travel</title>
+    <title>B.O.R.E.D</title>
     <style>body {background-color: #e2e2e2;}</style>
   </head>
   <body>
